--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "private": true,
   "dependencies": {
     "@craco/craco": "^5.6.4",
+    "@fortawesome/fontawesome-svg-core": "^1.2.28",
+    "@fortawesome/free-solid-svg-icons": "^5.13.0",
+    "@fortawesome/react-fontawesome": "^0.1.9",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
@@ -32,6 +35,9 @@
     ]
   },
   "devDependencies": {
-    "craco-alias": "^2.1.1"
+    "bulma": "^0.8.1",
+    "craco-alias": "^2.1.1",
+    "node-sass": "^4.13.1",
+    "prettier": "^2.0.4"
   }
 }
