setting up the develop the branch

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "scripts": {
     "start": "craco start",
+    "start:https": "HTTPS=true craco start",
     "build": "craco build",
     "test": "craco test"
   },
